docs: Expand README with comprehensive setup and PWA installation guide
Transforms the README from a basic local setup guide into a complete documentation resource covering deployment, PWA installation across platforms, icon generation, and project structure. Updates index.html with proper PWA meta tags, iOS-specific icons, and favicons. Replaces SVG icons with a PNG-based icon system generated from master SVGs. Adds icon generation script to package.json and configures Vite PWA plugin with complete

--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Zombie Survival</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <title>Wasteland</title>
+    <meta name="description" content="A 3D zombie survival game — playable in your browser as a PWA">
+
+    <!-- Theme & Status Bar -->
+    <meta name="theme-color" content="#2a2a2a">
+    <meta name="msapplication-TileColor" content="#2a2a2a">
+    <meta name="msapplication-TileImage" content="/Wasteland/icons/icon-144x144.png">
+
+    <!-- iOS PWA support -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#2a2a2a">
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.svg">
+    <meta name="apple-mobile-web-app-title" content="Wasteland">
+    <link rel="apple-touch-icon" href="/Wasteland/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/Wasteland/icons/icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="/Wasteland/icons/icon-167x167.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Wasteland/icons/icon-180x180.png">
+
+    <!-- iOS splash screens (common sizes) -->
+    <meta name="apple-mobile-web-app-orientations" content="landscape">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/Wasteland/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Wasteland/favicon-16x16.png">
+    <link rel="icon" type="image/png" href="/Wasteland/favicon.png">
   </head>
   <body>
     <div id="root"></div>
